# carcase_django_app

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
core/apps/product/: admin.py  tasks.py  urls.py  views.py
core/apps/product/models/: __init__.py  you_file_model.py
core/apps/user/: admin.py
core/domains/dto/: you_file_dto.py
core/domains/repository/: you_file_repository.py
core/domains/repository/interfaces/: you_file_interface.py
core/domains/services/: you_file_services.py
core/mixins/model/: time_at.py
core/project/: celery.py  urls.py
core/project/settings/: local.py  production.py
core/templates/: base.html
core/templates/product/: index.html
docker/: celery.sh
