[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["BulatKayrov <bulat.kajrov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"
celery = {extras = ["redis"], version = "^5.4.0"}
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
